Fixed the length of 3rd card on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -186,13 +186,13 @@ header {
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          width: 5rem;
-          height: 5rem;
+          min-width: 5rem;
+          min-height: 5rem;
           background-color: white;
           border-radius: 50%;
           img {
             height: 2rem;
-            width: 100%;
+            width: 5rem;
             object-fit: cover;
           }
           p {
